[HT-470] Explicitly expose required files and arguments so it shows the dependency on the test case [AE-2054] Deploy hive jars to HDFS to boost launch time and reuse Hive JARs